DuPont DevSB/src/objects/Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Our_Role__c</fullName>
        <inlineHelpText>Main role and responsibility we play in this Initiative</inlineHelpText>
        <label>Our Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facilitate</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>IB-Biomaterials-BioIsoprene</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Initiative</description>
        <label>Parent Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipName>Child_Initiative</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Attribute__c</fullName>
        <description>Performance Attributes the customer is looking for</description>
        <inlineHelpText>Performance Attributes the customer is looking for</inlineHelpText>
        <label>Performance Attribute</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aviation Rating</fullName>
                </value>
                <value>
                    <fullName>Custom Adhesive</fullName>
                </value>
                <value>
                    <fullName>Custom Color</fullName>
                </value>
                <value>
                    <fullName>Custom Finish</fullName>
                </value>
                <value>
                    <fullName>Custom Gauge</fullName>
                </value>
                <value>
                    <fullName>Custom Length</fullName>
                </value>
                <value>
                    <fullName>Custom Shape</fullName>
                </value>
                <value>
                    <fullName>Custom Width</fullName>
                </value>
                <value>
                    <fullName>Exact Match Required</fullName>
                </value>
                <value>
                    <fullName>Fire Rating</fullName>
                </value>
                <value>
                    <fullName>Marine Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability of Success of this specific Initiative meeting its stated business objectives</description>
        <inlineHelpText>Probability of Success of this specific Initiative meeting its stated business objectives</inlineHelpText>
        <label>Probability</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>list of product lines that can be associated with an initiative</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Montelli</fullName>
                </value>
                <value>
                    <fullName>Corian® Solid Surface</fullName>
                </value>
                <value>
                    <fullName>Corian® Quartz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualify_Checklist__c</fullName>
        <description>List of  the key qualification checklist actions performed in this Initiative</description>
        <inlineHelpText>List of  the key qualification checklist actions performed in this Initiative</inlineHelpText>
        <label>Qualify Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BU Commitment Confirmed</fullName>
                </value>
                <value>
                    <fullName>BU Resources Confirmed</fullName>
                </value>
                <value>
                    <fullName>Initiative meets qualification criteria</fullName>
                </value>
                <value>
                    <fullName>No New Product Needed</fullName>
                </value>
                <value>
                    <fullName>Product Adjustment Needed</fullName>
                </value>
                <value>
                    <fullName>Product Development Needed</fullName>
                </value>
                <value>
                    <fullName>Product information documented</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Main Reason for the Status of this Opportunity</description>
        <inlineHelpText>Main Reason for the Status of this Opportunity</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Strategy</fullName>
                </value>
                <value>
                    <fullName>Insufficient Opportunities</fullName>
                </value>
                <value>
                    <fullName>Insufficient Priority</fullName>
                </value>
                <value>
                    <fullName>Insufficient Resource</fullName>
                </value>
                <value>
                    <fullName>Met Objectives</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Catalog related to this Initiative</description>
        <label>Related Catalog</label>
        <referenceTo>Catalog__c</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resources_Required__c</fullName>
        <description>Main resources required for this Initiative to meet its Objectives</description>
        <label>Resources Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rev_Growth_Target_Y2__c</fullName>
        <description>Targeted Revenue Growth for this Initiative in its initial Year 2</description>
        <inlineHelpText>Targeted Revenue Growth for this Initiative in its Year 2</inlineHelpText>
        <label>Rev Growth Target Y2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rev_Growth_Target_Y3__c</fullName>
        <description>Targeted Revenue Growth for this Initiative in its initial Year 3</description>
        <inlineHelpText>Targeted Revenue Growth for this Initiative in its initial Year 3</inlineHelpText>
        <label>Rev Growth Target Y3</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rev_Growth_Year_1__c</fullName>
        <description>Targeted Revenue Growth for this Initiative in its initial Year 1 (Defined by the calendar year that includes the Start Date)</description>
        <inlineHelpText>Targeted Revenue Growth for this Initiative in its initial Year 1 (Defined by the calendar year that includes the Start Date)</inlineHelpText>
        <label>Rev Growth Target Y1</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Growth_Actual__c</fullName>
        <description>Actual Revenue growth achieved by this Initiative so far</description>
        <inlineHelpText>Actual Revenue growth achieved by this Initiative so far</inlineHelpText>
        <label>Revenue Growth (Actual)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Growth_Target__c</fullName>
        <description>Revenue Growth Objective</description>
        <inlineHelpText>Total Revenue Growth Objective of this initiative (from start to end date)</inlineHelpText>
        <label>Revenue Growth (Target)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segment_Group__c</fullName>
        <description>Segment Groups in the scope of this Initiative</description>
        <label>Segment Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFS-ES</fullName>
                </value>
                <value>
                    <fullName>AFS-LP</fullName>
                </value>
                <value>
                    <fullName>AFS-PM</fullName>
                </value>
                <value>
                    <fullName>Agent (agro)</fullName>
                </value>
                <value>
                    <fullName>Agent (food)</fullName>
                </value>
                <value>
                    <fullName>Agent (industrial)</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Animal nutrition</fullName>
                </value>
                <value>
                    <fullName>Bakery</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Bioenergy</fullName>
                </value>
                <value>
                    <fullName>Blending house (agro)</fullName>
                </value>
                <value>
                    <fullName>Blending house (food)</fullName>
                </value>
                <value>
                    <fullName>Blending house (industrial)</fullName>
                </value>
                <value>
                    <fullName>Carbohydrate processing</fullName>
                </value>
                <value>
                    <fullName>Closed (540)</fullName>
                </value>
                <value>
                    <fullName>Confectionery</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Culinary</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Dietary supplements</fullName>
                </value>
                <value>
                    <fullName>Digital Printing</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Distributor (agro)</fullName>
                </value>
                <value>
                    <fullName>Distributor (food)</fullName>
                </value>
                <value>
                    <fullName>Distributor (industrial)</fullName>
                </value>
                <value>
                    <fullName>DPP</fullName>
                </value>
                <value>
                    <fullName>DSRB</fullName>
                </value>
                <value>
                    <fullName>DTT</fullName>
                </value>
                <value>
                    <fullName>E-Electronics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the main Contact Sponsoring this initiative</description>
        <inlineHelpText>Person accountable for providing business direction to the project as well as harvesting the business benefits of this Initiative</inlineHelpText>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Current Stage in the overall life cycle of this Initiative</description>
        <inlineHelpText>Current Stage in the overall life cycle of this Initiative</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Define</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Design Solution</fullName>
                </value>
                <value>
                    <fullName>Active-Launch</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active-Close</fullName>
                </value>
                <value>
                    <fullName>Explore</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>Implement</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of this specific Initiative</description>
        <inlineHelpText>Planned and then Actual Start Date of this specific Initiative</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this Initiative</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#F3D904</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Behind Schedule</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33CC00</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                    <color>#CC0000</color>
                    <label>Abandoned</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Rep Estimation</fullName>
                </value>
                <value>
                    <fullName>District Review</fullName>
                </value>
                <value>
                    <fullName>Area Review</fullName>
                </value>
                <value>
                    <fullName>DP BU Meeting</fullName>
                </value>
                <value>
                    <fullName>DP Supply Meeting</fullName>
                </value>
                <value>
                    <fullName>BU Allocations</fullName>
                </value>
                <value>
                    <fullName>District Allocations</fullName>
                </value>
                <value>
                    <fullName>Rep Allocations</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_vs_Plan__c</fullName>
        <description>Status vs Plan</description>
        <label>Status vs Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusvsPlan_img__c</fullName>
        <formula>IMAGE(CASE(Status_vs_Plan__c,&quot;Red&quot;,&quot;/servlet/servlet.FileDownload?file=01530000000LgSA&quot;,&quot;Yellow&quot;,&quot;/servlet/servlet.FileDownload?file=01530000000LgS5&quot;,&quot;Green&quot;,&quot;/servlet/servlet.FileDownload?file=01530000000LgS0&quot;,&quot;/s.gif&quot;),&quot;StatusImg&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status vs Plan -</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Intent__c</fullName>
        <description>Strategic Intent of this initiative</description>
        <label>Strategic Intent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>Initiative SubType</description>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Mgm</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Brand Management</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Business Strategic Plan</fullName>
                </value>
                <value>
                    <fullName>Campaign Group</fullName>
                </value>
                <value>
                    <fullName>Carbon Value Capture</fullName>
                </value>
                <value>
                    <fullName>Central Billing</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Channel Management</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Company Acquisition</fullName>
                </value>
                <value>
                    <fullName>Company Screening</fullName>
                </value>
                <value>
                    <fullName>Competition Mgm</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Corporate Planning</fullName>
                </value>
                <value>
                    <fullName>Country Mgm</fullName>
                </value>
                <value>
                    <fullName>Custom Product Development</fullName>
                </value>
                <value>
                    <fullName>Deal Closing</fullName>
                </value>
                <value>
                    <fullName>Distributor Screening</fullName>
                </value>
                <value>
                    <fullName>DMX - T</fullName>
                </value>
                <value>
                    <fullName>DMX - T Quadrant 1</fullName>
                </value>
                <value>
                    <fullName>DMX - T Quadrant 2</fullName>
                </value>
                <value>
                    <fullName>DMX - T Quadrant 3</fullName>
                </value>
                <value>
                    <fullName>DMX - T Quadrant 4</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Industry Assessment</fullName>
                </value>
                <value>
                    <fullName>Industry Business Dev</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_PTOI_Actual__c</fullName>
        <label>Total PTOI Actual</label>
        <summarizedField>Initiative_Metric__c.PTOI_Actual__c</summarizedField>
        <summaryForeignKey>Initiative_Metric__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_PTOI_Target__c</fullName>
        <label>Total PTOI Target</label>
        <summarizedField>Initiative_Metric__c.PTOI_Target__c</summarizedField>
        <summaryForeignKey>Initiative_Metric__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Y1_YTD__c</fullName>
        <inlineHelpText>Automatic sum of all the Year 1 Revenue YTD entries contained in Initiative-Metrics of type &quot;Revenue&quot;</inlineHelpText>
        <label>Total Rev Y1-YTD</label>
        <summarizedField>Initiative_Metric__c.Rev_Y1_YTD__c</summarizedField>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Type__c</field>
            <operation>startsWith</operation>
            <value>Revenue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Rev_Y1_YTD__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Metric__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Y1__c</fullName>
        <description>Automatic sum of all the Year 2 Revenue YTD entries contained in Initiative-Metrics of type &quot;Revenue&quot;</description>
        <inlineHelpText>Automatic sum of all the Year 2 Revenue YTD entries contained in Initiative-Metrics of type &quot;Revenue&quot;</inlineHelpText>
        <label>Total Rev Y1</label>
        <summarizedField>Initiative_Metric__c.Rev_Y1__c</summarizedField>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Rev_Y1__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Metric__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Y2__c</fullName>
        <description>Automatic sum of all the Rev Y2s, the Year 2 Revenue entries contained in Initiative-Metrics of type &quot;Revenue&quot;</description>
        <inlineHelpText>Automatic sum of all the Rev Y2s, the Year 2 Revenue entries contained in Initiative-Metrics of type &quot;Revenue&quot;</inlineHelpText>
        <label>Total Rev Y2</label>
        <summarizedField>Initiative_Metric__c.Rev_Y2__c</summarizedField>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Rev_Y2__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Metric__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Y3__c</fullName>
        <description>Automatic sum of all the Rev Y3s, the Year 3 Revenue entries contained in Initiative-Metrics of type &quot;Revenue&quot;</description>
        <inlineHelpText>Automatic sum of all the Rev Y3s, the Year 3 Revenue entries contained in Initiative-Metrics of type &quot;Revenue&quot;</inlineHelpText>
        <label>Total Rev Y3</label>
        <summarizedField>Initiative_Metric__c.Rev_Y3__c</summarizedField>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Type__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Initiative_Metric__c.Rev_Y3__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Initiative_Metric__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Initiative</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Marketing Implementation</fullName>
                </value>
                <value>
                    <fullName>Marketing - Non-Pricing</fullName>
                </value>
                <value>
                    <fullName>Marketing Strategy</fullName>
                </value>
                <value>
                    <fullName>Process &amp; Tools</fullName>
                </value>
                <value>
                    <fullName>Product Development</fullName>
                </value>
                <value>
                    <fullName>Sales Implementation</fullName>
                </value>
                <value>
                    <fullName>Sales Strategy</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <description>Key Updates on the Status of this project</description>
        <inlineHelpText>Key Updates on the Status of this project</inlineHelpText>
        <label>Update</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fSales_Level_Name__c</fullName>
        <description>displays the Sales Level Name based on Organizational Group record selected.

(11/7/2017) - Removed Org_Group__c reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Level Name</label>
        <type>Text</type>
    </fields>
    <label>Initiative</label>
    <listViews>
        <fullName>All_Challenge_Projects_ECEMEA_EE</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Geography__c</columns>
        <columns>Geography_Comment__c</columns>
        <columns>StatusvsPlan_img__c</columns>
        <columns>Involved_Org__c</columns>
        <columns>Revenue_Growth_Target__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initiative_Group__c</field>
            <operation>contains</operation>
            <value>M&amp;S-EMEA-ECE/MEA</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>includes</operation>
            <value>EMEA-ECE/MEA-EE</value>
        </filters>
        <label>All Challenge Projects ECEMEA-EE</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEAECEMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BCECEMEA_EE_Initiatives</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Total_Rev_Y1_YTD__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Probability__c</columns>
        <columns>Parent_Initiative__c</columns>
        <columns>Involved_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>BCECEMEA</value>
        </filters>
        <label>BCECEMEA_EE_Initiatives</label>
        <language>en_US</language>
        <sharedTo>
            <group>BCEMEAECEMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIInvolved</fullName>
        <columns>NAME</columns>
        <columns>Geography__c</columns>
        <columns>Segment_Group__c</columns>
        <columns>Channel__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Revenue_Growth_Target__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>StatusvsPlan_img__c</columns>
        <columns>Initiative_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Involved_Org__c</field>
            <operation>includes</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>includes</operation>
            <value>EMEA</value>
        </filters>
        <label>BI-EMEA Involved</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_eWarranty</fullName>
        <columns>NAME</columns>
        <columns>Geography__c</columns>
        <columns>Segment_Group__c</columns>
        <columns>Channel__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Revenue_Growth_Target__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>StatusvsPlan_img__c</columns>
        <columns>Initiative_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Involved_Org__c</field>
            <operation>includes</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>includes</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>eWarranty,e-registration</value>
        </filters>
        <label>BI-EMEA eWarranty</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>